--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -4,6 +4,12 @@
         <item name="android:statusBarColor">@color/yellow_ligth</item>
         <item name="android:windowBackground">@color/yellow_ligth</item>
     </style>
+    <style name="DialogMessageText">
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textAlignment">center</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textSize">@dimen/ml_txt_medium</item>
+    </style>
     <style name="MLCustomShapeAppearanceBottomSheetDialog" parent="">
         <item name="cornerFamily">rounded</item>
         <item name="cornerSizeTopRight">16dp</item>
@@ -17,6 +23,7 @@
     <style name="MLCustomBottomSheetDialog" parent="@style/ThemeOverlay.MaterialComponents.BottomSheetDialog">
         <item name="bottomSheetStyle">@style/MLCustomBottomSheet</item>
     </style>
+
 
 
 </resources>
