--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,5 @@
     <dimen name="margin_padding_size_medium">16dp</dimen>
     <dimen name="margin_padding_size_small">8dp</dimen>
     <dimen name="ml_txt_medium">15sp</dimen>
+    <dimen name="ml_txt_large">18sp</dimen>
 </resources>
